
===========================================================================
MARK: released gwenhywfar-3.3.5 (2008/07/8)
===========================================================================

2008/07/03: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added check for default hard limit of GWEN_BUFFERs


===========================================================================
MARK: released gwenhywfar-3.3.4 (2008/06/11)
===========================================================================

2008/06/11: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- always ask for the pin if the CONFIRM flag is set


2008/06/10: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added function GWEN_CryptKeyRsa_GetSecretExponent()
- removed unneeded code from src/crypt3/padd.c
- added gct-tool command "changepin"


2008/06/09: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in CSV exporter (note: GWEN_FASTBUFFER_WRITEBYTES only writes
  as many bytes as possible, use GWEN_FASTBUFFER_WRITEFORCED if you want
  all bytes to be written)


===========================================================================
MARK: released gwenhywfar-3.3.3 (2008/06/06)
===========================================================================


2008/06/06: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- changed the way the crypttoken password name is generated. It now
  creates the same names as AqHBCI
- decreased severity of message which asks the user to insert a card


2008/05/30: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in io_http.c (was waiting until timeout with a special 
  EBICS server)


===========================================================================
MARK: released gwenhywfar-3.3.2 (2008/05/27)